--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/acitvity"
         android:title="Activity"
         android:icon="@drawable/activity_selection" />
+    <item android:id="@+id/marketing"
+        android:title="Campaign"
+        android:icon="@drawable/campaign_selection" />
 </menu>
