--- a/app/src/main/res/layout/fragment_marketing.xml
+++ b/app/src/main/res/layout/fragment_marketing.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.Marketing">
-
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
@@ -27,10 +30,23 @@
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
+           android:layout_marginBottom="20dp"
+           app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView131" />
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
+       <com.google.android.material.floatingactionbutton.FloatingActionButton
+           android:id="@+id/floatingActionButton"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginEnd="20dp"
+           android:layout_marginBottom="20dp"
+           android:clickable="true"
+           android:src="@drawable/baseline_access_time_24"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent" />
 
+   </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
 </FrameLayout>
