--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,13 +12,21 @@
         tools:layout="@layout/fragment_leads" >
         <action
             android:id="@+id/action_leads_to_userProfile"
-            app:destination="@id/userProfile" />
+            app:destination="@id/userProfile"
+            app:popUpTo="@id/leads"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/schedule"
         android:name="com.example.leadiify.view.Schedule"
         android:label="fragment_schedule"
-        tools:layout="@layout/fragment_schedule" />
+        tools:layout="@layout/fragment_schedule" >
+        <action
+            android:id="@+id/action_schedule_to_leads"
+            app:destination="@id/leads"
+            app:popUpTo="@id/schedule"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/dashboard"
         android:name="com.example.leadiify.view.Dashboard"
@@ -36,7 +44,9 @@
         tools:layout="@layout/fragment_marketing" >
         <action
             android:id="@+id/action_marketing_to_createCampaign"
-            app:destination="@id/createCampaign" />
+            app:destination="@id/createCampaign"
+            app:popUpTo="@id/marketing"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/userProfile"
