--- a/app/src/main/res/layout/fragment_acitvity.xml
+++ b/app/src/main/res/layout/fragment_acitvity.xml
@@ -8,24 +8,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textView12"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/textView131"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/border"
-        android:drawableStart="@drawable/baseline_search_24"
-        android:drawablePadding="8dp"
-        android:paddingStart="8dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:text="Search Leads"
-        android:textAlignment="textStart"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Templates Performance"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,7 +28,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/textView131" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
