--- a/app/src/main/res/layout/fragment_create_campaign.xml
+++ b/app/src/main/res/layout/fragment_create_campaign.xml
@@ -97,7 +97,7 @@
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
+    <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -117,4 +117,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
         app:strokeColor="#B1AFB1"
         app:strokeWidth="0.5dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar4"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
