--- a/app/src/main/res/layout/fragment_marketing.xml
+++ b/app/src/main/res/layout/fragment_marketing.xml
@@ -12,6 +12,7 @@
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
+
        <TextView
            android:id="@+id/textView131"
            android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
+           android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
