--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,7 +20,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins"
-                android:text="Prospect Funel"
+                android:text="Prospect Funnel"
                 android:textColor="#040000"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="510dp"
                 android:fontFamily="@font/poppins"
-                android:text="Maturity Assessment"
+                android:text="No Of Closed Wons"
                 android:textColor="#040000"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
